--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_executable(rhoe_example rhoe_main.cpp)
-target_link_libraries(rhoe_example PRIVATE rhoe)
+add_executable(txeo_example txeo_main.cpp)
+target_link_libraries(txeo_example PRIVATE txeo)
