--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,22 @@
-target_sources(txeo PRIVATE
-  Tensor.cpp
-  # Add other source files
+
+set(TXEO_SOURCES Tensor.cpp)
+
+# Static Library
+add_library(txeo_static STATIC ${TXEO_SOURCES})
+target_include_directories(txeo_static PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:/include>
 )
+target_link_libraries(txeo_static PUBLIC TensorFlow::TensorFlow)
+set_target_properties(txeo_static PROPERTIES OUTPUT_NAME "txeo")
+
+
+# Dynamic Library
+add_library(txeo_shared SHARED ${TXEO_SOURCES})
+target_compile_definitions(txeo_shared PUBLIC TXEO_SHARED)
+target_include_directories(txeo_shared PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include>
+)
+target_link_libraries(txeo_shared PUBLIC TensorFlow::TensorFlow)
+set_target_properties(txeo_shared PROPERTIES OUTPUT_NAME "txeo")
