gcovr, doxygen and intel compiler incorporated in cmake. xmake removed.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,16 +50,49 @@ install(FILES
 
 
 # Automating Doxygen
-find_package(Doxygen REQUIRED)
+find_package(Doxygen REQUIRED COMPONENTS dot)
 
-set(DOXYGEN_IN ${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile)
+if(DOXYGEN_FOUND)
+  set(DOXYGEN_IN ${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile)
 
-add_custom_target(doxygen ALL
-    COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYGEN_IN}
-    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-    COMMENT "Generating Doxygen documentation..."
+  add_custom_target(doxygen ALL
+      COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYGEN_IN}
+      WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+      COMMENT "Generating Doxygen documentation..."
+      VERBATIM
+  )
+  install(DIRECTORY ${DOXYGEN_OUT} DESTINATION share/docs)
+else()
+  message(WARNING "Doxygen not found. Documentation target will not be available.")
+endif()
+
+
+#Automating gcovr
+option(TXEO_ENABLE_COVERAGE "Enable code coverage reporting" OFF)
+
+if(TXEO_ENABLE_COVERAGE)
+  find_program(GCOVR_PATH gcovr PATHS ENV PATH)
+  if(NOT GCOVR_PATH)
+    message(FATAL_ERROR "gcovr not found.")
+  endif()
+
+  add_custom_target(coverage
+  COMMAND ${GCOVR_PATH}
+      --gcov-executable "llvm-cov gcov"
+      --root ${CMAKE_SOURCE_DIR}
+      --exclude-unreachable-branches
+      --exclude-throw-branches
+      --print-summary
+      --html-details ${CMAKE_BINARY_DIR}/coverage_report.html
+    WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
+    COMMENT "Generating coverage report..."
     VERBATIM
-)
+  )
 
-# Install documentation (optional)
-install(DIRECTORY ${DOXYGEN_OUT} DESTINATION share/docs)
+  add_custom_target(coverage-clean
+    COMMAND find ${CMAKE_BINARY_DIR} -name "*.gcda" -type f -delete
+    COMMENT "Cleaning coverage data..."
+  )
+
+  add_dependencies(coverage txeo_tests)
+endif()
