TensorIO tested and documented. Code compiled sucessfully in gcc and intel.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-set(TXEO_SOURCES utils.cpp TensorShape.cpp Tensor.cpp)
+set(TXEO_SOURCES utils.cpp TensorShape.cpp Tensor.cpp TensorIO.cpp)
 
 
 #################################################### Finding Tensorflow ####################################################
