--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -2,24 +2,19 @@ name: Generate and Deploy Doxygen Docs
 
 on:
   push:
-    branches:
-      - main  
+    branches: [ "main" ]
+
+  workflow_dispatch:
 
 jobs:
   deploy-docs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Install Doxygen
         run: sudo apt-get install -y doxygen graphviz
 
       - name: Generate Doxygen Documentation
         run: doxygen Doxyfile
-
-      - name: Deploy to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@v4
-        with:
-          branch: gh-pages  
-          folder: docs/html  
