--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -22,6 +22,7 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./docs/html
           keep_files: false
           force_orphan: true
