--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,14 +1,16 @@
 
-set(TXEO_SOURCES utils.cpp 
-                 TensorShape.cpp 
-                 TensorOp.cpp 
-                 TensorAgg.cpp 
-                 Tensor.cpp 
-                 TensorIO.cpp 
-                 TensorPart.cpp 
-                 TensorFunc.cpp
-                 Matrix.cpp
-                 Predictor.cpp)
+set(TXEO_SOURCES 
+    utils.cpp 
+    TensorShape.cpp 
+    TensorOp.cpp 
+    TensorAgg.cpp 
+    Tensor.cpp 
+    TensorIO.cpp 
+    TensorPart.cpp 
+    TensorFunc.cpp
+    Matrix.cpp
+    Vector.cpp
+    Predictor.cpp)
 
 
 #################################################### Finding Tensorflow ####################################################
