Creating github actions for mkdocs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,4 +28,4 @@ jobs:
 
       - name: Deploy to GitHub Pages
         working-directory: mkdocs
-        run: mkdocs gh-deploy --force --config-file
+        run: mkdocs gh-deploy --force
