--- a/mkdocs/mkdocs.yml
+++ b/mkdocs/mkdocs.yml
@@ -7,6 +7,7 @@ theme:
   name: material
   language: en
   logo: assets/logo.png
+  favicon: img/favicon.ico
   palette:
     - media: "(prefers-color-scheme: dark)"
       scheme: slate
