Include cleaning for faster compilation

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -26,12 +26,15 @@ find_package(TensorFlow REQUIRED COMPONENTS CXX SHARED)
 #################################################### Static Library ####################################################
 
 add_library(txeo_static STATIC ${TXEO_SOURCES})
+# target_precompile_headers(txeo_static PRIVATE
+#     "$<$<COMPILE_LANGUAGE:CXX>:${CMAKE_SOURCE_DIR}/include/txeo/detail/pch.h>"
+# )
 target_include_directories(txeo_static PUBLIC
     $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
     $<INSTALL_INTERFACE:/include>
 )
 target_link_libraries(txeo_static PUBLIC TensorFlow::TensorFlow)
-set_target_properties(txeo_static PROPERTIES OUTPUT_NAME "txeo")
+set_target_properties(txeo_static PROPERTIES OUTPUT_NAME "txeo") 
 
 
 #################################################### Dynamic Library ####################################################
@@ -44,6 +47,9 @@ if(CMAKE_GENERATOR STREQUAL "Ninja" AND $ENV{CXX} STREQUAL "icpx")
 endif()
   
 add_library(txeo_shared SHARED ${TXEO_SOURCES})
+# target_precompile_headers(txeo_shared PRIVATE
+#     "$<$<COMPILE_LANGUAGE:CXX>:${CMAKE_SOURCE_DIR}/include/txeo/detail/pch.h>"
+# )
 target_compile_definitions(txeo_shared PUBLIC TXEO_SHARED)
 target_include_directories(txeo_shared PUBLIC
     $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
