--- a/mkdocs/mkdocs.yml
+++ b/mkdocs/mkdocs.yml
@@ -49,6 +49,7 @@ nav:
       - TensorPart: api-reference/tensor-part.md
       - Predictor: api-reference/predictor.md
       - Loss: api-reference/loss.md
+      - DataTable: api-reference/data-table.md
       - Trainer: api-reference/trainer.md
       - OlsTrainer: api-reference/ols_gd_trainer.md
   # - Tutorials:
