--- a/mkdocs/mkdocs.yml
+++ b/mkdocs/mkdocs.yml
@@ -50,6 +50,7 @@ nav:
       - Predictor: api-reference/predictor.md
       - Loss: api-reference/loss.md
       - DataTable: api-reference/data-table.md
+      - DataTableNorm: api-reference/data-table-norm.md
       - Trainer: api-reference/trainer.md
       - OlsTrainer: api-reference/ols_gd_trainer.md
   # - Tutorials:
