Beginning logger development

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,7 +16,8 @@ set(TXEO_SOURCES
     OlsGDTrainer.cpp
     Loss.cpp
     DataTable.cpp
-    DataTableNorm.cpp)
+    DataTableNorm.cpp
+    Logger.cpp)
 
 
 #################################################### Finding Tensorflow ####################################################
