--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -22,6 +22,7 @@ add_executable(
   tDataTable.cpp
   tDataTableNorm.cpp
   tLoggerConsole.cpp
+  tLoggerFile.cpp
 )  
 
 target_precompile_headers(txeo_tests PRIVATE
